--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App de tablas de multiplicar del 1 al 10",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server/serve.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "crear": "node tabla crear",
     "listar": "node tabla listar -t=1 -l=10",
@@ -18,9 +18,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "express": "^4.17.1",
     "yargs": "^16.2.0"
-  },
-  "devDependencies": {}
+  }
 }
