--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App de tablas de multiplicar del 1 al 10",
   "main": "app.js",
   "scripts": {
-    "start": "node server/serve.js",
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "crear": "node tabla crear",
     "listar": "node tabla listar -t=1 -l=10",
