--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.6",
+    "mongoose-unique-validator": "^2.0.3",
+    "underscore": "^1.12.0",
     "yargs": "^16.2.0"
   }
 }
