--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "app.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "crear": "node tabla crear",
     "listar": "node tabla listar -t=1 -l=10",
     "listar-tareas": "node tareas listar",
@@ -22,6 +21,7 @@
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.6",
     "mongoose-unique-validator": "^2.0.3",
